--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: inline-flex;
+  padding: 10px 10px 10px 16px;
+  /* justify-content: flex-end; */
   align-items: center;
+  background: #141920;
+  width: 97%;
+  height: 36px;
+  margin-bottom: 0px;
+}
+
+.logo{
+  width: 100px;
+  height: 30px;
+}
+
+.ribbon {
+  display: inline-flex;
+  padding: 10px 10px 10px 16px;
+  /* justify-content: flex-end; */
+  align-items: center;  
+  background: #252F3D;
+  width: 97%;
+  height: 15px;
+  margin-top: -5px;
+}
+
+.loc-logo{
+  width: 16px;
+height: 16px;
+flex-shrink: 0;
+margin-top: 8px;
+margin-bottom: 11px;
+margin-left: 20px;
+margin-right: 2px;
+}
+
+.textarea{
+  color: aliceblue;
+  margin-right: 20px;
+  width: auto;
+}
+
+.ordername {
+  color: var(--Primary---White, #FFF);
+font-family: Amazon Ember;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+margin-left: 22px;
+margin-bottom: 21px;
+margin-right: 34px;
+margin-top: 10px;
+width: auto;
+}
+
+.orderplace{
+  color: var(--Primary---White, #FFF);
+font-family: Amazon Ember;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+margin-left: 20px;
+margin-bottom: 18px;
+}
+
+.search{
+  display: flex;
+width: 764px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 4px;
+background: var(--Primary---White, #FFF);
+}
+
+.ham-logo{
+  width: 16px;
+height: 16px;
+}
+
+.menu{
+  display: flex;
+  width: auto;
+  height: 15px;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--Primary---White, #FFF);
+font-family: Amazon Ember;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+margin-left: 24px;
+gap: 24px;
+margin-right: 24px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.result {
+  display: inline-flex;
+  padding: 10px 10px 10px 16px;
+  justify-content: space-between;
+  align-items: center;  
+  background: #FFF;
+  width: 97%;
+  height: 15px;
+  margin-top: -5px;
+  background: var(--Primary---White, #FFF);
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.09);
+  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.phone{
+  color: var(--Secondary---Orange, #C45500);
+font-family: Amazon Ember;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
 }
