--- a/src/phone.css
+++ b/src/phone.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.cdnfonts.com/css/amazon-ember');
+
 .product{
     /* background-color: aqua; */
     display: flex;
     /* display: inline; */
     flex-direction: row;
+    font-family: 'Amazon Ember', sans-serif;
     /* width: 20px; */
     gap: 16px;
     margin-top: 16px;
@@ -11,6 +14,7 @@
     align-items: flex-start;
     width: 1020px;
     height: 190px;
+    /* margin-left: 372px; */
 }
 
 /* .img{
@@ -20,6 +24,20 @@
 .phone{
     /* background-color: aqua; */
     width: 100px;
+    font-family: 'Amazon Ember', sans-serif;
+}
+
+.old-price{
+    text-decoration:line-through;
+}
+
+.real-price{
+    color: var(--Secondary---Red, #B12704);
+    font-family: Amazon Ember;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 /* div{
@@ -36,4 +54,10 @@
 
 .details{
     width: auto;
+    color: var(--Primary---Black, #18191A);
+    font-family: 'Amazon Ember', sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
